# meww_bot

./: .gitignore  Cargo.toml  Cargo.toml~  example_config.toml  replit.nix
src/: config.rs  file_loader.rs  file_loader.rs~  main.rs  main.rs~
src/commands/: mod.rs
src/commands/level_system/: levels.json  levels.json~  server_enabler.json  xp.rs  xp.rs~
src/commands/moderation/: kick_ban.rs  manage_messages.rs  manage_messages.rs~  mod.rs  mute_roles.json  muting.rs  spam_count.json  unmuted_times.json
src/commands/music/: mod.rs  mod.rs~  play_pause.rs  play_pause.rs~  queue.rs~
