[package]
name = "discord_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio               = { version = "*", features = ["full", "macros", "rt-multi-thread"] }
dotenv              = "*"
toml                = "*"
serde               = "*"
serde_derive        = "*"
serde_json          = "*"
poise               = "*"
chrono              = "*" 
